Fix test-picker-sk field overlapping during window resize and add integration test
Screenshot: https://screenshot.googleplex.com/7TjD2vBAnhFw8Je.png

Bug: 480015474
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/1192117
Commit-Queue: Sergei Rudenkov <sergeirudenkov@google.com>

--- a/perf/modules/test-picker-sk/test-picker-sk.scss
+++ b/perf/modules/test-picker-sk/test-picker-sk.scss
@@ -6,16 +6,17 @@
     height: 2px;
   }
 
-  #testPicker,
-  #fieldContainer {
+  #testPicker {
     display: flex;
     align-items: flex-start;
     gap: 8px;
+    flex-wrap: wrap;
   }
 
   #fieldContainer {
     display: flex;
     align-items: flex-start;
+    gap: 28px 8px;
     flex-wrap: wrap;
   }
 
